Started doing swagger docs for all paths
